--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -309,7 +309,7 @@ a {
 
 	padding: 133px 0;
 	background: url('../img/people.png') no-repeat 110% 126%;
-	background-size: 49%;
+	background-size: 909px;
 
 	h2 {
 		@include r(767) {
